--- a/Assets/android-button/invitebutton.html
+++ b/Assets/android-button/invitebutton.html
@@ -91,7 +91,7 @@ content: 'INVITE';
 }
 </style>
 
-<div id="button" class="android-btn"></div>
+<div id="button" href="https://discord.com/oauth2/authorize?client_id=943894832089288724&scope=applications.commands%20bot&permissions=8" class="android-btn"></div>
 
 <script>
 
